# playwright

./: .appveyor.yml  .babelrc  .cirrus.yml  .env.example  .eslintignore  .eslintrc-with-ts-config.js  .eslintrc.js  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .npmignore  .npmrc  .oxlintrc.json  .prettierignore  .prettierrc.yml  .tool-versions  .travis.yml  AGENTS.md  CDP Session Bug Description.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM.md  DETAILS.md  DeviceDescriptors.js  Errors.js  FILING_ISSUES.md  FORK.md  LICENSE  NOTICE  PR.md  README.md  SECURITY.md  SUPPORT.md  android-script.js  android-server.js  android-types-internal.d.ts  android-types.d.ts  (+43 more)
.azure-pipelines/: docker-build-arch.yml  publish-docker.yml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md  workflows
.playwright/: cli.config.json
.storybook/: main.js  preview.js
browser_patches/: README.md  bots.md  build.sh  check_cdn.sh  checkout_build_archive_upload.sh  clean.sh  contributing.md  do_checkout.sh  docker_build.sh  download.sh  export.sh  get_xcode_version.js  prepare_checkout.sh  repack-juggler.mjs  roll_from_upstream.sh  sanitize_and_compress_log.js  sanitize_env.js  send_telegram_message.js  send_telegram_message.sh  upload.sh  utils.sh
browser_patches/webkit/embedder/Playwright/mac/: AppDelegate.h  AppDelegate.m  BrowserWindow.xib  BrowserWindowController.h  BrowserWindowController.m  CMakeLists.txt  Info.plist  MainMenu.xib  Playwright_Prefix.pch  main.m
browser_patches/webkit/src/Tools/Playwright/win/: CMakeLists.txt  Common.cpp  Common.h  MainWindow.cpp  MainWindow.h  PlaywrightResource.h  WebKitBrowserWindow.cpp  WebKitBrowserWindow.h  WinMain.cpp  stdafx.h
docker/: Dockerfile.bionic  README.md
docs/: README.md  actionability.md  api.md  assertions.md  auth.md  browsers.md  ci.md  class-accessibility.md  class-browser.md  class-browsercontext.md  class-browserserver.md  class-browsertype.md  class-cdpsession.md  class-chromiumbrowser.md  class-chromiumbrowsercontext.md  class-chromiumcoverage.md  class-consolemessage.md  class-dialog.md  class-download.md  class-elementhandle.md  class-filechooser.md  class-firefoxbrowser.md  class-frame.md  class-jshandle.md  class-keyboard.md  class-logger.md  class-mouse.md  class-page.md  class-playwright.md  class-request.md  class-response.md  class-route.md  class-selectors.md  class-timeouterror.md  class-touchscreen.md  class-video.md  class-webkitbrowser.md  class-websocket.md  class-worker.md  cli.md  (+29 more)
docs-src/: README.md  actionability.md  api-body.md  api-footer.md  api-header.md  api-links.md  api-params.md  assertions.md  auth.md  ci.md  cli.md  core-concepts.md  debug.md  emulation.md  extensibility.md  input.md  installation.md  intro.md  languages.md  mobile.md  multi-pages.md  navigations.md  network.md  pom.md  selectors.md  showcase.md  test-runners.md  troubleshooting.md  verification.md  why-playwright.md
e2e/: draganddrop.test.ts  example.spec.ts  launchChrome.test.ts  playwrightAction.test.ts
examples/: pdf.js  (+8 more)
(+4757 files in other folders)
